# bahoth

./: .gitignore  CMakeLists.txt  credits.md  cube.stl
lib/: camera.h  debug.h  game.h  main.h  render.h  shaders.h  stl.h  tiles.h  window.h  windows_compat.h
src/: camera.c  debug.c  game.c  main.c  render.c  shaders.c  stl.c  tiles.c  window.c  windows_compat.c
src/shaders/: light.frag  transform.vert
